Fixed footer a tag padding and spacing, added text transform

--- a/themes/integrate-play/sass/_footer.scss
+++ b/themes/integrate-play/sass/_footer.scss
@@ -23,12 +23,14 @@
 
   .menu {
     padding: 0px;
+    text-transform: uppercase;
 
     li {
-    margin: 3rem;
+    margin: 1rem;
     }
 
     a {
+      padding: 20px 10px;
       text-decoration: none;
       color: $color__brand-grey;
     }
